--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
-    <script src="https://bootswatch.com/5/lux/bootstrap.min.css" rel="styhlesheet"></script>
-    <script src="https://bootswatch.com/5/lux/bootstrap.css" rel="styhlesheet"></script>
-    <script src="./bootstrap/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
+    <script src="./bootstrap/bootstrap.min.css" rel="styhlesheet"></script>
+    <script src="./bootstrap/bootstrap.css" rel="styhlesheet"></script>
     <script src="./jQuery/jQuery_v3.60.js" rel="styhlesheet"></script>
     <script src="./jQuery/jQuery-ui_v1.12.1.js" rel="styhlesheet"></script>
     <title>akconsultancy</title>
