--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </nav>
     </div>
     <div>
-        <h1>akconsultancy offical page v1.00 developing</h1>
+        <h1>akconsultancy official page v1.00 developing</h1>
         <p>San 2021-11-02 10:02</p>
     </div>
 </body>
