--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
-    <script src="./bootstrap/bootstrap.min.css" rel="styhlesheet"></script>
-    <script src="./bootstrap/bootstrap.css" rel="styhlesheet"></script>
-    <script src="./jQuery/jQuery_v3.60.js" rel="styhlesheet"></script>
+    <script src="./bootstrap/bootstrap.min.css" rel="stylesheet"></script>
+    <script src="./bootstrap/bootstrap.css" rel="stylesheet"></script>
+    <script src="./jQuery/jQuery_v3.60.js" rel="stylesheet"></script>
     <script src="./jQuery/jQuery-ui_v1.12.1.js" rel="styhlesheet"></script>
     <title>akconsultancy</title>
 </head>
@@ -56,7 +56,7 @@
           </nav>
     </div>
     <div>
-        <h1>akconsultancy official page v1.00 developing</h1>
+        <h1>akconsultancy official page v0.10 developing</h1>
         <p>San 2021-11-02 10:02</p>
     </div>
 </body>
